new files and modified files

--- a/news_articles/2025-08-15/summary/1289479106b4f77733ebc2498a187695503218dfcea074b130ae752266f34804.md
+++ b/news_articles/2025-08-15/summary/1289479106b4f77733ebc2498a187695503218dfcea074b130ae752266f34804.md
@@ -1,20 +1,18 @@
 ## [단독] 작년 아파치 헬기들 남방한계선 근접 비행 “軍 작전” vs “北 자극”
 
 ## 주요 내용:
-*   내란 특검팀이 윤석열 전 대통령의 외환 혐의 수사 중 육군항공사령부 소속 아파치 헬기들의 2024년 비행 자료를 확보하여 북한 도발 유도 여부를 수사 중이다.
-*   확보된 자료에 따르면, 아파치 헬기들은 2024년 6월부터 11월까지 총 4차례에 걸쳐 비행금지선(NFL)을 넘어 남방한계선(SLL)에 근접하여 40~120여km를 횡단 비행했다.
+*   윤석열 전 대통령의 외환 혐의를 수사하는 내란 특검팀이 2024년 육군항공사령부 소속 아파치 헬기들의 비행 자료를 확보하여 북한 도발 유도 여부를 수사 중이다.
+*   확보된 비행 자료에 따르면, 헬기들은 작년 6월부터 11월까지 총 4차례에 걸쳐 비행금지선(NFL)을 넘어 남방한계선(SLL)에 근접하여 40~120여km를 횡단 비행한 것으로 확인되었다.
 *   비행금지선은 군사분계선(MDL)에서 남쪽으로 약 8km 지점에 있으며, 정전협정에 따라 진입이 금지되어 있다.
-*   2024년 7월 30일, 헬기들은 파주 오두산 인근에서 출발해 비행금지선을 넘어 연천 백학면까지 약 40km를 남방한계선을 따라 비행했다.
-*   8월 23일과 11월 5일에는 비행금지선 내 비행 구간이 더 넓어져, 오두산 인근에서 강원 철원 복계산 인근까지 약 120km를 비행하기도 했다. 일부 헬기는 북쪽을 향해 연천 군자산에서 복계산까지 비행했다.
+*   작년 7월 30일, 아파치 헬기들은 경기 파주시 탄현면 오두산 인근에서 출발해 비행금지선을 넘어 연천군 백학면까지 약 40km를 남방한계선을 따라 비행했다.
+*   8월과 11월에는 비행금지선 내 비행 구간이 더 넓어져, 8월 23일에는 오두산 인근에서 강원 철원군 복계산 인근까지 약 120km를 비행했으며, 일부 헬기는 북쪽을 향해 비행하기도 했다.
 *   당시 작전에 참여한 군 관계자들은 "이렇게까지 자극해도 되나 싶을 정도였다", "적의 눈에 띄도록 높게 비행하라는 지시도 있었다"고 전했다.
-*   합동참모본부는 지난 3월, 해당 공격 헬기 활동이 통상 훈련이었고 정상적인 작전이었다는 입장을 밝혔다.
-*   합참은 2024년 6월 2018년 9·19 군사 합의 효력이 전면 정지되면서 공중 감시와 정찰 활동을 재개했다고 설명했다.
-*   해당 비행 자료는 추미애 더불어민주당 의원실을 통해 확보되었다.
+*   합동참모본부(합참)는 지난 3월 해당 공격 헬기 활동이 통상 훈련이자 정상적인 작전이었다는 입장을 밝혔다.
+*   합참은 작년 6월 2018년 9·19 군사 합의 효력이 전면 정지되면서 공중 감시와 정찰 활동을 재개한 것이라고 설명했다.
 
-## 요약
+## 요약:
+내란 특검팀이 윤석열 전 대통령의 외환 혐의 수사 과정에서 육군항공사령부 소속 아파치 헬기들의 2024년 비행 자료를 확보하여 북한의 도발을 유도했는지 여부를 조사하고 있다. 이 자료에 따르면, 아파치 헬기들은 작년 6월부터 11월까지 총 네 차례에 걸쳐 비행금지선(NFL)을 넘어 남방한계선(SLL)에 근접하여 40km에서 최대 120km까지 횡단 비행한 것으로 드러났다. 비행금지선은 정전협정에 따라 진입이 금지된 구역으로, 군사분계선에서 남쪽으로 약 8km 떨어진 지점에 위치한다.
 
-조선일보의 단독 보도에 따르면, 윤석열 전 대통령의 외환 혐의를 수사 중인 내란 특검팀이 육군항공사령부 소속 아파치 헬기들의 2024년 비행 자료를 확보하여 북한의 도발을 유도한 것인지 여부를 수사하고 있다. 특검팀이 더불어민주당 추미애 의원실을 통해 확보한 이 자료에는 아파치 헬기들이 2024년 6월부터 11월까지 총 4차례에 걸쳐 비행금지선(NFL)을 넘어 남방한계선(SLL)에 근접하여 40km에서 최대 120km까지 횡단 비행한 경로가 담겨 있는 것으로 파악되었다. 비행금지선은 군사분계선(MDL)에서 남쪽으로 약 8km 떨어진 지점으로, 정전협정에 따라 진입이 금지된 구역이다.
+특히, 헬기들은 2024년 7월 30일 경기 파주 오두산 인근에서 연천 백학면까지 약 40km를 비행금지선을 넘어 남방한계선을 따라 비행했으며, 8월과 11월에는 비행 구간이 더욱 확대되어 강원 철원 복계산 인근까지 약 120km를 비행한 것으로 확인되었다. 일부 헬기는 북쪽을 향해 비행하기도 했다. 당시 작전에 참여했던 군 관계자들은 이러한 비행이 "너무 자극적이었다"거나 "적의 눈에 띄도록 높게 비행하라는 지시가 있었다"고 증언하여 논란을 더하고 있다.
 
-구체적인 비행 사례로는 2024년 7월 30일, 헬기들이 경기 파주시 오두산 인근에서 출발해 비행금지선을 넘어 연천군 백학면까지 약 40km를 남방한계선을 따라 비행한 것이 확인되었다. 이후 8월 23일과 11월 5일에는 비행금지선 내 비행 구간이 더욱 넓어져, 오두산 인근에서 강원 철원군 복계산 인근까지 약 120km를 비행했으며, 일부 헬기는 북쪽을 향해 연천군 군자산에서 복계산까지 비행한 것으로 나타났다. 당시 작전에 참여했던 일부 군 관계자들은 "이렇게까지 자극해도 되나 싶을 정도였다", "적의 눈에 띄도록 높게 비행하라는 지시도 있었다"고 증언하며 해당 비행의 수위에 대한 우려를 표명했다.
-
-이에 대해 합동참모본부(합참)는 지난 3월, 해당 공격 헬기들의 활동이 통상적인 훈련이었으며 정상적인 작전이었다는 입장을 밝혔다. 합참은 2024년 6월 2018년 9·19 군사 합의의 효력이 전면 정지되면서 공중 감시 및 정찰 활동을 재개한 것이라고 설명했다. 현재 내란 특검팀은 이러한 아파치 헬기들의 남방한계선 근접 비행이 단순한 군사 작전이었는지, 아니면 북한의 도발을 의도적으로 유도하려는 목적이 있었는지에 대해 집중적으로 수사하고 있으며, 이는 군의 설명과 상반되는 의혹을 해소하는 데 초점이 맞춰져 있다.
+이에 대해 합동참모본부(합참)는 지난 3월 해당 아파치 헬기들의 활동이 통상적인 훈련의 일환이자 정상적인 작전이었다고 해명했다. 합참은 2018년 9·19 군사 합의의 효력이 작년 6월 전면 정지됨에 따라 공중 감시 및 정찰 활동을 재개한 것이라고 설명하며, 해당 비행의 정당성을 주장하고 있다. 그러나 특검팀은 이 비행들이 북한의 도발을 의도적으로 유도하려 한 것인지에 대해 집중적으로 수사하고 있어, 군의 작전과 특검의 수사 사이에 진실 공방이 이어질 것으로 보인다.
