--- a/news_articles/2025-08-15/summary/210612b1fa81e323c1429827b6088eb1a58014ec3db49e2e0bfb6892e71cbfcf.md
+++ b/news_articles/2025-08-15/summary/210612b1fa81e323c1429827b6088eb1a58014ec3db49e2e0bfb6892e71cbfcf.md
@@ -1,18 +1,18 @@
 ## 미국보다 일본 먼저… 23일 韓日 정상회담
 
 ## 주요 내용:
-*   이재명 대통령이 8월 23~24일 일본을 방문하여 이시바 시게루 일본 총리와 한일 정상회담 및 만찬을 가질 예정이다.
-*   이후 이 대통령은 8월 25일 미국 워싱턴DC에서 도널드 트럼프 미 대통령과 한미 정상회담을 진행한다.
-*   우리 대통령이 취임 후 양자 정상회담을 위해 방문하는 첫 번째 국가로 일본을 택한 것은 이번이 처음이다.
-*   이는 이 대통령의 한일 협력 의지를 보여주는 것으로 해석된다.
+*   이재명 대통령이 8월 23일부터 24일까지 일본을 방문하여 이시바 시게루 일본 총리와 한일 정상회담 및 만찬을 가질 예정이다.
+*   이후 이 대통령은 8월 25일 미국 워싱턴DC에서 도널드 트럼프 미 대통령과 한미 정상회담을 할 예정이다.
+*   우리 대통령이 취임 후 양자 정상회담을 위해 방문하는 첫 번째 국가로 일본을 택한 것은 처음 있는 일이다.
 *   이번 방일은 지난 6월 G7 정상회의 계기에 이시바 총리와 약속했던 '셔틀 외교 재개'의 의미를 담고 있다.
-*   일본 총리관저 역시 한일 양국이 국제사회의 여러 과제에 협력해야 할 중요한 이웃 국가임을 강조하며, 한일 및 한미일 협력의 중요성이 커지고 있다고 밝혔다.
-*   이시바 총리 내각은 지난달 참의원 선거 참패 이후 퇴진론에 직면해 있어, 이 대통령의 방일을 외교적 성과로 반기고 있다.
-*   올해는 광복 80주년이자 한일 수교 60주년으로, 이 대통령이 방일 기간 중 새 시대 한일 관계의 지향점을 제시할지 주목된다.
+*   올해는 광복 80주년이자 한일 수교 60주년으로, 이 대통령이 방일 기간 새 시대 한일 관계의 지향점을 제시할지 주목된다.
+*   대통령실은 양국 정상 간 개인적 유대 및 신뢰 관계가 더욱 깊어지길 기대하며, 한일 및 한미일 공조 강화 방안과 역내 평화와 안정, 지역·글로벌 이슈에 대해 논의할 것이라고 밝혔다.
+*   참의원 선거 참패 이후 퇴진론에 몰린 이시바 총리와 내각은 이번 이 대통령의 방일을 외교적 성과로 반기고 있다.
 
 ## 요약
-이재명 대통령이 8월 23일부터 24일까지 일본을 방문하여 이시바 시게루 일본 총리와 정상회담 및 만찬을 진행할 예정이며, 이는 취임 후 첫 양자 정상회담 방문국으로 일본을 선택한 전례 없는 행보이다. 이번 방문은 이 대통령의 강력한 한일 협력 의지를 보여주는 것으로 해석되며, 지난 6월 G7 정상회의에서 약속했던 '셔틀 외교 재개'의 의미를 담고 있다. 대통령실은 이번 회담을 통해 양국 정상 간 개인적 유대와 신뢰 관계가 더욱 깊어지고, 한일 및 한미일 공조 강화 방안은 물론 역내 평화와 안정, 지역 및 글로벌 이슈에 대한 의견 교환이 이루어질 것으로 기대하고 있다.
 
-일본 총리관저 또한 이번 정상회담에 대해 환영의 뜻을 표하며, 한일 양국이 국제사회의 다양한 과제에 협력해야 할 중요한 이웃 국가임을 강조했다. 특히 최근 전략 환경에서 한일 및 한미일 협력의 중요성이 더욱 커지고 있다고 언급하며, 긴밀한 의사소통을 지속할 것이라고 밝혔다. 이시바 총리 내각은 지난달 참의원 선거 참패 이후 퇴진론에 직면해 있어, 이번 이 대통령의 방일이 미국과의 관세 협상 타결에 이은 한일 셔틀 외교의 복원이라는 점에서 자국 국민에게 보여줄 만한 중요한 외교적 성과로 여겨지고 있다.
+조선일보 보도에 따르면, 이재명 대통령이 오는 8월 23일부터 24일까지 일본을 방문하여 이시바 시게루 일본 총리와 한일 정상회담 및 만찬을 진행할 예정이다. 이는 이 대통령이 취임 후 양자 정상회담을 위해 방문하는 첫 번째 국가로 일본을 선택했다는 점에서 주목할 만하다. 이례적인 이번 일본 선방문은 한일 관계 개선에 대한 이 대통령의 강력한 의지를 보여주는 것으로 해석된다.
 
-올해는 광복 80주년이자 한일 수교 60주년이라는 역사적인 의미를 지니고 있어, 이 대통령이 이번 방일 기간 동안 새로운 시대의 한일 관계 지향점을 제시할지 여부에도 관심이 집중되고 있다. 이번 정상회담은 양국 관계 개선과 협력 강화를 위한 중요한 전환점이 될 것으로 기대되며, 동북아시아의 평화와 안정에도 긍정적인 영향을 미칠 것으로 전망된다.
+이번 방일은 지난 6월 G7 정상회의에서 이시바 총리와 합의했던 '셔틀 외교 재개'의 의미를 담고 있으며, 양국 정상 간의 개인적인 유대와 신뢰 관계를 더욱 깊게 하는 계기가 될 것으로 기대된다. 특히 올해가 광복 80주년이자 한일 수교 60주년이라는 점에서, 이 대통령이 이번 방문을 통해 새로운 한일 관계의 방향성을 제시할지 여부에도 관심이 쏠리고 있다. 대통령실은 이번 회담에서 한일 및 한미일 공조 강화 방안뿐만 아니라 역내 평화와 안정, 그리고 다양한 지역 및 글로벌 현안에 대한 심도 깊은 논의가 이루어질 것이라고 밝혔다.
+
+한편, 일본 이시바 총리 내각은 지난달 참의원 선거 참패 이후 퇴진 압박에 직면해 있어, 이번 이재명 대통령의 방일을 환영하는 분위기다. 미국과의 관세 협상 타결에 이은 한일 셔틀 외교의 복원은 이시바 내각에게 자국 국민에게 보여줄 수 있는 중요한 외교적 성과로 여겨지고 있기 때문이다. 이 대통령은 일본 방문 이후 8월 25일에는 미국 워싱턴DC로 이동하여 도널드 트럼프 미 대통령과 한미 정상회담을 가질 예정이다.
