--- a/news_articles/2025-08-15/summary/29384dc138fca4d4a0558e96b1c5a6b41a1d272edd966bc37f2a1197a659e4f0.md
+++ b/news_articles/2025-08-15/summary/29384dc138fca4d4a0558e96b1c5a6b41a1d272edd966bc37f2a1197a659e4f0.md
@@ -1,19 +1,19 @@
-## 전기요금 인상 불가피성 및 기후위기 대응 논의 보고서
+## 이 대통령 "전기요금 오를 수밖에 없다...국민에 이해 구해야"
 
 ## 주요 내용:
-*   이재명 대통령은 온실가스 감축 목표 달성을 위해 전기요금 인상이 불가피하며, 이에 대한 국민적 이해와 동의를 구해야 한다고 밝혔다.
-*   이 발언은 올해 유엔(UN)에 제출할 2035년 국가 온실가스 감축 목표 수립을 위한 기후위기 대책 및 에너지 정책 토의 과정에서 나왔다.
-*   감축 목표 달성을 위해 천연가스 및 석탄 사용을 줄이고 고가의 재생에너지 비중을 늘려야 하며, 이는 한국전력의 전력 구매 비용 증가로 이어져 전기요금 인상 압박을 가중시킨다.
-*   이 대통령은 철강, 정유, 화학 등 특정 산업의 특수성을 고려한 정책 추진을 지시하며, 산업용 전기요금이 이미 2~3년 새 약 70% 인상되어 기업 부담이 크다는 점을 지적했다.
-*   또한, 전기요금 인상으로 인한 취약 계층의 부담 가중에 대한 우려를 표명했다.
-*   대통령실은 당장 전기요금을 인상한다는 것이 아니라, 온실가스 감축 목표 설정에 따른 인상 압박을 최소화하기 위한 대책 마련을 고민해야 한다는 입장임을 밝혔다.
-*   전문가들은 대통령의 발언이 타당하지만, 산업용 요금은 유지하고 주택용만 인상할 경우 국민적 반발이 클 수 있으며, 탄소 중립이라는 기본 전제에 대한 사회적 논의가 필요하다고 제언했다.
-*   과거 이 대통령은 야당 대표 시절 윤석열 정부의 전기요금 인상 계획에 반대하며 재검토를 요구한 바 있다.
+*   이재명 대통령은 8월 14일, 온실가스 감축 목표 달성을 위해 전기 요금 인상이 불가피하며, 이에 대해 국민들에게 적극적으로 알리고 이해와 동의를 구해야 한다고 밝혔다.
+*   이는 올해 안에 유엔(UN)에 제출해야 하는 2035년 국가 온실가스 감축 목표 수립 상황을 점검하는 자리에서 나온 발언이다.
+*   대통령은 기후 위기에 적극적으로 대응하고 재생에너지 생산을 획기적으로 늘려 국가 감축 목표를 달성하는 방안을 강구하라고 지시했다.
+*   천연가스나 석탄 사용을 줄이고 비싼 재생에너지를 늘릴 경우 한국전력의 전력 구매 비용이 증가하여 전기 요금 인상으로 이어질 수밖에 없다는 것이 주요 논리이다.
+*   이 대통령은 철강, 정유, 화학 등 일부 업종의 특수성을 고려하여 정책을 추진해야 한다고 언급하며, 산업에 일률적으로 적용할 경우 미칠 영향을 우려했다.
+*   가정용 전기 요금은 제자리인 반면 산업용 전기 요금은 2~3년 새 70%가량 올라 기업 부담이 큰 상황임을 지적한 것으로 풀이된다.
+*   취약 계층에게 전기 요금 인상 부담이 전가되는 상황에 대한 우려도 표명했으며, 당장 요금을 올린다는 것은 시기상조이며 오늘부터 고민해야 할 문제라고 덧붙였다.
+*   조홍종 단국대 교수는 대통령의 발언이 맞지만 산업용을 놔두고 주택용만 올리면 국민 반발이 심할 것이라고 지적했으며, 탄소 중립 비용 감당 여부에 대한 사회적 논의 필요성을 제기했다.
+*   유승훈 서울과기대 교수 또한 미국, 중국, 인도 등 주요국들이 화석연료를 줄이지 않고 있으며, 독일도 석탄 사용이 많은 상황에서 한국만 줄인다고 기후변화를 막을 수 없다는 점에서 탄소 중립이라는 기본 전제에 대한 사회적 논의가 필요하다고 강조했다.
 
 ## 요약
+이재명 대통령은 8월 14일, 온실가스 감축 목표 달성을 위해 전기 요금 인상이 불가피하다는 입장을 밝히며, 국민들에게 이러한 상황을 적극적으로 알리고 이해와 동의를 구해야 한다고 강조했다. 이는 한국이 올해 안에 유엔에 제출해야 할 2035년 국가 온실가스 감축 목표를 수립하는 과정에서 나온 발언으로, 기후 위기 대응을 위해 재생에너지 생산을 획기적으로 늘려야 하며, 이로 인해 발생하는 전력 구매 비용 증가가 전기 요금 인상으로 이어질 수밖에 없다는 논리이다. 대통령은 또한 철강, 정유, 화학 등 특정 산업의 특수성을 고려한 정책 추진의 필요성을 언급하며, 산업 전반에 일률적인 적용이 미칠 부정적 영향을 경계했다.
 
-이재명 대통령은 기후위기 대응과 온실가스 감축 목표 달성을 위해 전기요금 인상이 불가피하다는 입장을 표명하며, 이에 대한 국민의 이해와 동의를 구해야 한다고 강조했다. 이는 올해 유엔에 제출될 2035년 국가 온실가스 감축 목표 수립과 관련하여 논의된 것으로, 목표 달성을 위해서는 천연가스 및 석탄 사용을 줄이고 고가의 재생에너지 비중을 확대해야 하며, 이로 인해 한국전력의 전력 구매 비용이 증가하여 전기요금 인상 압박이 커질 수밖에 없다는 설명이다. 대통령은 또한 철강, 정유, 화학 등 특정 산업의 특수성을 고려한 정책 추진을 당부하며, 이미 산업용 전기요금이 크게 인상되어 기업 부담이 상당하다는 점을 언급했다.
+이 대통령은 과거 윤석열 정부의 전기 요금 인상 계획에 반대하며 재검토를 요구했던 이력이 있으나, 이번 발언을 통해 기후 위기 대응이라는 큰 틀에서 전기 요금 인상의 불가피성을 시사했다. 다만, 당장 요금을 올린다는 것은 시기상조이며, 취약 계층에게 부담이 전가되는 상황에 대한 우려를 표명하며 오늘부터 심도 있는 고민이 필요하다고 덧붙였다. 대통령실 관계자는 이 발언이 요금이 올라갈 수도 있지만, 재생에너지 고도화 및 확충을 통해 인상 압력을 최소화하라는 의미였다고 설명했다.
 
-이 대통령은 전기요금 인상이 취약 계층에 미칠 부담에 대해서도 우려를 표명했다. 대통령실은 현재 전기요금을 당장 인상한다는 의미가 아니라, 온실가스 감축 목표 설정에 따라 발생할 수 있는 인상 압박을 최소화하기 위한 방안을 모색해야 한다는 입장임을 밝혔다. 이는 재생에너지 고도화 및 확충을 통해 전기요금 인상 압력을 줄이는 노력이 필요하다는 의미로 해석된다.
-
-한편, 조홍종 단국대 교수와 유승훈 서울과기대 교수 등 전문가들은 대통령의 발언이 현실을 반영한 것이지만, 산업용 요금은 그대로 두고 주택용만 인상할 경우 국민적 반발이 심할 수 있다고 지적했다. 또한, 미국, 중국, 인도 등 주요국들이 화석연료 감축에 소극적이거나 실리 추구 경향을 보이는 상황에서, 한국만 탄소 중립을 위해 막대한 비용을 감당해야 하는지에 대한 사회적 논의가 필요하다는 의견도 제기되었다. 기사는 이 대통령이 과거 야당 대표 시절 윤석열 정부의 전기요금 인상 계획에 반대하며 재검토를 요구했던 점을 언급하며, 현재의 입장 변화에 대한 배경을 시사했다.
+전문가들은 대통령의 발언에 대해 다양한 의견을 제시했다. 조홍종 단국대 교수는 대통령의 말이 맞지만, 산업용 요금은 그대로 두고 주택용만 올릴 경우 국민적 반발이 클 것이라고 경고했다. 또한, 한국이 모든 비용을 감당하며 탄소 중립을 추진해야 하는지에 대한 사회적 논의가 필요하다고 지적했다. 유승훈 서울과기대 교수 역시 미국, 중국, 인도 등 주요국들이 화석연료 사용을 줄이지 않고 있으며, 독일마저 석탄 사용이 늘어나는 상황에서 한국만 감축한다고 기후변화를 막을 수 없다는 점을 들어 탄소 중립이라는 기본 전제에 대한 사회적 논의의 필요성을 강조했다.
