--- a/news_articles/2025-08-15/summary/3f480eac705a7af3ca1e1e989a9191b2ca021ef78569640b676a62e7fa4aedfa.md
+++ b/news_articles/2025-08-15/summary/3f480eac705a7af3ca1e1e989a9191b2ca021ef78569640b676a62e7fa4aedfa.md
@@ -1,22 +1,23 @@
 ## 광복 80년 대장정… 식민지 벗어난 신생국이 세계 6위 강국으로
 
 ## 주요 내용:
-*   한국은 식민지배와 6.25 전쟁의 폐허를 딛고 '한강의 기적'을 통해 세계적인 경제 대국으로 성장했다.
-*   1인당 GDP는 해방 직후 300~500달러에서 2025년 3만4640달러(IMF 전망)로 약 115배 증가했으며, 경제 규모(GDP)는 지난해 세계 12위, '국가 총국력'(포브스 기준)은 6위를 기록했다.
-*   1970년 개통된 경부고속도로는 수출 시대를 열었으며, 현재 한국의 고속도로망은 5000km를 넘어섰다.
-*   1948년 해조류 수출 1만3000달러에서 지난해 6838억 달러의 수출액을 달성했으며, 반도체와 자동차가 주요 수출품이다.
-*   과거 미국의 무기에 의존했던 한국은 이제 자주포, 전투기, 잠수함 등을 수출하는 방위산업 강국이 되었다.
-*   한국인의 평균 신장은 남성 7cm, 여성 8cm 커졌고, 체형도 6.6등신에서 7.3등신으로 변화했다.
-*   식생활 변화로 소고기 섭취량은 1인당 연간 1kg에서 15kg으로 늘었으며, 육류 소비량이 쌀 소비량을 앞질렀다.
-*   영아사망률은 1955년 1000명당 112명에서 지난해 2명으로 세계 최저 수준으로 개선되었다.
-*   자동차 등록 대수는 해방 직후 7000대에서 2630만대(2024년 말)로 증가했으며, 휴대전화 회선은 8922만개에 달한다.
-*   세탁기 보급률은 1980년 14%에서 2019년 99%로 급증하며 여성의 삶에 큰 변화를 가져왔다.
-*   세계 한류 팬 수는 2012년 900만명에서 2023년 2억2500만명으로 폭발적으로 증가했으며, 한국 작품은 3대 국제영화제 및 미국 4대 대중문화상에서 총 43개의 상을 수상했다.
-*   한국인 해외 여행객 수는 1965년 13만명에서 지난해 2869만명으로 늘었으며, 한국 여권은 190개국 무비자 입국이 가능하여 싱가포르에 이어 일본과 공동 2위의 '파워'를 자랑한다.
+*   한국은 식민지와 6.25 전쟁의 폐허를 딛고 80년 만에 세계적인 경제 및 문화 강국으로 성장했습니다.
+*   1955년 300~500달러 수준이던 1인당 GDP는 2025년 국제통화기금(IMF) 전망치 기준 3만4640달러로 115배 증가했습니다.
+*   지난해 한국의 경제 규모(GDP)는 세계 12위, 포브스 기준 '국가 총국력'은 세계 6위를 기록했습니다.
+*   1970년 개통된 경부고속도로를 시작으로 5000km가 넘는 고속도로망이 구축되어 수출 시대를 열었습니다.
+*   1948년 1만3000달러 규모의 해조류 수출에서 지난해 6838억 달러의 반도체, 자동차 등 주력 수출국으로 변모했습니다.
+*   과거 미국의 무기에 의존하던 한국은 연간 약 100억 달러 규모의 무기를 수출하는 방위산업 강국으로 부상했습니다.
+*   한국인의 평균 신장은 남성 7cm, 여성 8cm 커졌고, 체형도 6.6등신에서 7.3등신으로 변화했습니다.
+*   1960년대 연간 1kg이던 소고기 소비량은 현재 15kg으로 늘었으며, 2021년 육류 소비량이 쌀 소비량을 추월했습니다.
+*   영아사망률은 1955년 1000명당 112명에서 지난해 2명으로 감소하여 세계 최저 수준을 기록했습니다.
+*   자동차 등록 대수는 해방 즈음 7000대에서 2024년 말 2630만 대로 증가했으며, 휴대전화 회선은 8922만 개에 달합니다.
+*   세계 한류 팬 수는 2012년 900만 명에서 2023년 2억2500만 명으로 급증했으며, 주요 국제 영화제 및 대중문화상에서 한국 작품의 수상 실적이 누적 43개에 달합니다.
+*   한국인 해외 여행객 수는 1965년 13만 명에서 지난해 2869만 명으로 늘었으며, 한국 여권은 190개국 무비자 입국이 가능하여 세계 2위의 '파워'를 가집니다.
+*   육류 섭취 증가로 인해 20~49세 젊은 대장암 환자 수가 세계에서 가장 많다는 부작용도 나타났습니다.
 
 ## 요약
-이 기사는 광복 80주년을 맞아 식민지배와 전쟁의 폐허 속에서 출발한 대한민국이 어떻게 세계적인 강국으로 성장했는지를 다각도로 조명하고 있다. '해방둥이' 장성일 씨의 삶을 통해 한국이 겪어온 격동의 80년을 압축적으로 보여주며, 최빈국에서 1인당 GDP가 115배 증가하고 국가 총국력에서 세계 6위에 오르는 등 유례없는 경제 성장을 이룩했음을 강조한다. 경부고속도로 개통과 수출 증대, 방위산업 강국으로의 도약 등 경제적 성과뿐만 아니라, 한국인의 신체적 변화와 식생활 개선, 위생 및 의료 수준 향상으로 인한 영아사망률 감소 등 삶의 질 향상도 함께 다루고 있다.
+조선일보 기사는 광복 80년을 맞이하는 한국이 식민지와 전쟁의 폐허를 딛고 세계적인 강국으로 성장한 놀라운 여정을 조명합니다. 1955년 300~500달러에 불과했던 1인당 GDP는 2025년 3만4640달러로 115배 폭증했으며, 이는 세계적으로 유례없는 고도 성장을 보여줍니다. 경제 규모는 세계 12위, 국가 총국력은 6위에 오르며 명실상부한 선진국 대열에 합류했습니다. 이러한 성장은 경부고속도로 건설과 같은 인프라 확충, 반도체와 자동차를 중심으로 한 수출 증대, 그리고 자주포와 전투기 등을 수출하는 방위산업 강국으로의 변모를 통해 이루어졌습니다.
 
-또한, 기사는 한국 사회의 생활상 변화를 구체적인 수치로 제시하며 급격한 발전을 설명한다. 자동차와 휴대전화 보급률의 폭발적인 증가, 세탁기 보급을 통한 여성의 삶의 변화 등은 한국 사회가 얼마나 빠르게 현대화되었는지를 보여준다. 특히, 2000년대 이후 '한류'로 대표되는 문화 상품의 세계적 성공은 한국이 경제 강국을 넘어 문화 강국으로 자리매김했음을 입증한다. 세계 한류 팬 수의 급증과 국제적인 영화제 및 대중문화상 수상 실적은 한국 문화의 영향력이 전 세계로 확산되었음을 보여주는 중요한 지표이다.
+경제적 성장과 더불어 한국인의 삶의 질과 생활상도 크게 변화했습니다. 평균 신장이 커지고 체형이 서구화되었으며, 식생활에서는 육류 소비가 급증하고 쌀 소비가 감소하는 경향을 보였습니다. 위생과 의료 기술의 발전은 영아사망률을 세계 최저 수준으로 낮추는 데 기여했습니다. 또한, 자동차와 휴대전화 보급률이 폭발적으로 증가하며 현대적인 생활 양식이 정착되었습니다. 이러한 변화는 한국 사회 전반의 발전과 국민들의 삶의 질 향상을 상징합니다.
 
-마지막으로, 기사는 한국인의 세계화된 모습을 조명한다. 해외 여행객 수의 증가와 세계적으로 높은 위상을 가진 한국 여권의 '파워'는 한국이 더 이상 고립된 국가가 아닌, 세계와 활발히 교류하고 영향을 주고받는 글로벌 리더로 성장했음을 시사한다. 전반적으로 이 기사는 한국이 지난 80년간 이룬 경제, 사회, 문화 전반의 놀라운 발전상을 객관적이고 균형 잡힌 시각으로 분석하며, '신생국'에서 '세계 6위 강국'으로 발돋움한 대한민국의 대장정을 성공적인 사례로 제시하고 있다.
+한국의 성장은 경제와 생활 수준에만 국한되지 않았습니다. 문화 분야에서도 '한류'라는 이름으로 전 세계적인 영향력을 행사하며, 2023년 기준 한류 팬 수가 2억2500만 명에 달하는 등 K-팝, K-드라마를 필두로 한류 콘텐츠가 세계인의 사랑을 받고 있습니다. 칸, 베를린, 베네치아 등 3대 국제 영화제와 미국의 4대 대중문화상에서 한국 작품이 43개의 상을 수상하며 문화 강국의 위상을 확고히 했습니다. 이와 함께 한국인의 해외여행이 보편화되고 한국 여권의 위상이 세계 2위로 높아지는 등, 한국은 이제 세계와 적극적으로 교류하고 세계 무대에서 중요한 역할을 하는 국가로 자리매김했습니다. 다만, 육류 섭취 증가로 인한 젊은 층 대장암 발병률 증가와 같은 부작용도 함께 언급되며, 균형 잡힌 시각으로 한국의 발전을 조명하고 있습니다.
