--- a/news_articles/2025-08-15/summary/9494248e99e9e253a9675599713e8eb4cece58c7d828ece881cc300e904d006e.md
+++ b/news_articles/2025-08-15/summary/9494248e99e9e253a9675599713e8eb4cece58c7d828ece881cc300e904d006e.md
@@ -1,22 +1,20 @@
-## 이재명 대통령 지지율 59% 기록, 민주당 41%·국민의힘 22% [한국갤럽](종합)
+## 이재명 대통령 지지율 59% 기록, 민주당 하락·국민의힘 상승 (한국갤럽 종합)
 
 ## 주요 내용:
-*   이재명 대통령의 국정 지지율은 지난달 중순 대비 5%포인트 하락한 59%를 기록했다.
-*   긍정 평가의 주요 이유는 '경제·민생'(15%), '전반적으로 잘한다'(9%), '소통'(8%), '민생회복지원금'(6%) 등이었다.
-*   부정 평가의 가장 큰 이유는 '특별사면'(22%)이었으며, 이어서 '과도한 복지·민생지원금'(11%), '외교'(10%), '도덕성 문제·자격 미달'(7%) 등이 뒤를 이었다.
-*   지역별 지지율은 광주·전라가 86%로 가장 높았고, 대구·경북(44%)과 부산·울산·경남(49%)은 과반을 밑돌았다.
-*   연령별로는 40대(77%)와 50대(71%)에서 높은 지지율을 보였으며, 70대 이상에서는 40%로 가장 낮았다.
-*   이념 성향별로는 진보층(86%), 중도층(64%), 보수층(35%) 순으로 긍정 평가가 나타났다.
-*   정당 지지도는 더불어민주당이 41%로 지난 조사 대비 5%포인트 하락했고, 국민의힘은 22%로 3%포인트 상승했다.
-*   조국혁신당과 개혁신당은 각각 3%, 진보당은 1%의 지지율을 보였으며, 무당층은 28%로 집계되었다.
-*   국민의힘 당 대표 선호도 조사에서는 국민의힘 지지층의 절반가량(46%)이 김문수 후보를 지목했다.
-*   이번 조사는 한국갤럽이 8월 12일부터 14일까지 전국 만 18세 이상 1,007명을 대상으로 진행했으며, 표본오차는 95% 신뢰수준에 ±3.1%포인트다.
+*   이재명 대통령의 국정 지지율이 지난달 중순 대비 5%포인트 하락한 59%를 기록했다.
+*   대통령 국정 수행 긍정 평가의 주요 이유는 '경제·민생'(15%), '전반적으로 잘한다'(9%), '소통'(8%), '민생회복지원금'(6%) 등이었다.
+*   부정 평가의 주요 사유는 '특별사면'(22%), '과도한 복지·민생지원금'(11%), '외교'(10%), '도덕성 문제·자격 미달'(7%) 등으로 나타났다.
+*   정당 지지도는 더불어민주당이 지난 조사보다 5%포인트 하락한 41%를 기록했다.
+*   국민의힘 지지도는 지난 조사 대비 3%포인트 상승한 22%로 집계되었다.
+*   조국혁신당과 개혁신당은 각각 3%, 진보당은 1%의 지지율을 보였으며, 무당층은 28%였다.
+*   지역별로는 광주·전라(86%)에서 대통령 지지율이 가장 높았고, 대구·경북(44%)과 부산·울산·경남(49%)은 과반을 밑돌았다.
+*   연령별로는 40대(77%)와 50대(71%)에서 대통령 지지율이 높았으며, 70대 이상(40%)은 유일하게 절반을 넘지 못했다.
+*   이념 성향별로는 진보층(86%)과 중도층(64%)에서 대통령 국정 수행 긍정 평가가 높았고, 보수층은 35%가 지지를 밝혔다.
+*   국민의힘 당 대표 선호도 조사에서는 김문수 후보가 국민의힘 지지층 내에서 46%의 지지를 얻었다.
 
 ## 요약
-한국갤럽이 2025년 8월 12일부터 14일까지 전국 성인 1,007명을 대상으로 실시한 여론조사 결과, 이재명 대통령의 국정 지지율이 59%를 기록하며 지난달 대비 5%포인트 하락한 것으로 나타났다. 긍정 평가의 주된 요인으로는 '경제·민생'이 가장 큰 비중을 차지했으며, '전반적으로 잘한다', '소통', '민생회복지원금' 등도 긍정적인 영향을 미쳤다. 반면, 부정 평가의 가장 큰 이유는 '특별사면'이었고, '과도한 복지·민생지원금', '외교', '도덕성 문제·자격 미달' 등도 부정적 평가에 기여했다.
+한국갤럽이 8월 12일부터 14일까지 전국 성인 1,007명을 대상으로 실시한 여론조사 결과, 이재명 대통령의 국정 지지율이 지난달 중순 대비 5%포인트 하락한 59%를 기록했다. 이는 긍정 평가 이유로 '경제·민생', '전반적으로 잘한다', '소통' 등이 꼽혔음에도 불구하고, '특별사면'과 '과도한 복지·민생지원금' 등이 부정 평가의 주요 원인으로 작용한 것으로 분석된다. 특히 '특별사면'은 부정 평가의 가장 큰 비중을 차지하며 대통령 지지율 하락에 영향을 미친 것으로 보인다.
 
-지역별 지지율에서는 광주·전라 지역이 86%로 압도적인 지지를 보인 반면, 대구·경북과 부산·울산·경남 지역에서는 과반에 미치지 못하는 지지율을 기록하며 지역별 편차가 뚜렷하게 나타났다. 연령별로는 40대와 50대에서 70% 이상의 높은 지지율을 보였으나, 70대 이상에서는 40%로 가장 낮은 지지율을 보였다. 이념 성향별로는 진보층에서 압도적인 지지를 받았고, 중도층에서도 과반 이상의 지지를 얻었으나, 보수층에서는 상대적으로 낮은 지지율을 보였다.
+정당 지지도에서는 더불어민주당이 지난 조사 대비 5%포인트 하락한 41%를 기록하며 동반 하락세를 보였다. 반면 국민의힘은 3%포인트 상승한 22%의 지지율을 기록하며 소폭 상승했다. 이는 대통령 지지율 하락과 민주당 지지율 하락이 맞물리면서 국민의힘이 반사이익을 얻은 것으로 해석될 수 있다. 조국혁신당과 개혁신당, 진보당 등 다른 정당들은 한 자릿수 지지율에 머물렀으며, 무당층은 28%로 나타났다.
 
-정당 지지도에서는 더불어민주당이 41%로 여전히 가장 높은 지지율을 유지했으나, 지난 조사 대비 5%포인트 하락했다. 반면 국민의힘은 22%로 3%포인트 상승하며 격차를 다소 줄였다. 조국혁신당과 개혁신당은 각각 3%의 지지율을 기록했으며, 무당층은 28%로 나타났다. 또한, 국민의힘 당 대표 선거와 관련하여 국민의힘 지지층 내에서는 김문수 후보가 가장 높은 선호도를 보였다.
-
-이번 조사는 무작위 추출된 무선전화 가상번호에 전화 조사원 인터뷰 방식으로 진행되었으며, 표본오차는 95% 신뢰수준에 ±3.1%포인트, 응답률은 13.4%이다. 전반적으로 이재명 대통령의 국정 지지율은 여전히 높은 수준을 유지하고 있으나, 일부 부정적 요인과 지역 및 연령별 지지율 편차가 존재함을 보여준다. 정당 지지도에서는 민주당의 하락세와 국민의힘의 상승세가 주목할 만하며, 향후 정치 지형 변화에 영향을 미칠 것으로 예상된다.
+대통령 지지율을 세부적으로 살펴보면, 지역별로는 광주·전라 지역에서 86%로 가장 높은 지지율을 보였으나, 대구·경북과 부산·울산·경남에서는 과반에 미치지 못하는 지지율을 기록했다. 연령별로는 40대와 50대에서 70% 이상의 높은 지지율을 보인 반면, 70대 이상에서는 유일하게 40%로 절반을 넘지 못했다. 이념 성향별로는 진보층과 중도층에서 높은 지지를 받았으나, 보수층에서는 상대적으로 낮은 지지율을 보였다. 이번 조사는 무작위 추출된 무선전화 가상번호에 전화 조사원 인터뷰 방식으로 진행되었으며, 표본오차는 95% 신뢰수준에 ±3.1%포인트다.
