--- a/news_articles/2025-08-15/summary/f3c4b039f78473843771894f6bfd6f64c796810e73603d9c6daf918941d87eb6.md
+++ b/news_articles/2025-08-15/summary/f3c4b039f78473843771894f6bfd6f64c796810e73603d9c6daf918941d87eb6.md
@@ -1,18 +1,17 @@
-## 이재명 대통령, 제80주년 광복절 경축사: "北체제 존중, 흡수통일 추구 않겠다"
+## 이재명 대통령, 광복 80주년 경축사: "北체제 존중, 흡수통일 추구 않겠다"
 
 ## 주요 내용:
 *   이재명 대통령은 제80주년 광복절 경축사에서 북한의 현 체제를 존중하며 어떠한 형태의 흡수 통일도 추구하지 않을 것이라고 밝혔다.
-*   대통령은 일체의 적대행위를 할 뜻이 없음을 분명히 하고, 낡은 냉전적 사고와 대결에서 벗어나 평화로운 한반도의 새 시대를 열어야 한다고 강조했다.
-*   지난 정부 내내 단절되었던 남북 대화의 복원과 신뢰 회복을 최우선 과제로 제시하며, 신뢰는 말이 아닌 행동으로 만들어진다고 언급했다.
-*   국민주권정부는 취임 직후부터 대북 전단 살포 및 대북 확성기 방송 중단 조치를 취했으며, 앞으로도 긴장 완화와 신뢰 회복을 위한 조치를 일관되게 취할 것이라고 밝혔다.
-*   한일 관계에 대해서는 "과거를 직시하되 미래로 나아가는 지혜를 발휘해야 할 때"라고 진단하며, 일본을 이웃이자 경제 발전의 중요한 동반자로 언급했다.
-*   국익 중심의 실용 외교와 셔틀 외교를 통해 일본과 미래지향적인 상생 협력의 길을 모색할 것이며, 일본 정부에도 과거의 아픈 역사를 직시하고 신뢰 훼손 방지를 위한 노력을 촉구했다.
-*   국내 정치에 대해서는 사적 이익을 추구하는 세력이 분단을 빌미로 국민을 분열시키고 전쟁으로 몰아넣으려 했다고 지적하며, 낡은 이념과 진영에 기초한 분열에서 벗어나 대화와 양보에 기초한 연대와 상생의 정치를 제안했다.
-*   독립운동가를 모욕하는 행위를 용납하지 않고 국민 주권이 빛을 잃지 않는 나라로 나아가야 한다고 강조했다.
+*   대통령은 일체의 적대행위를 할 뜻이 없음을 분명히 하고, 낡은 냉전적 사고와 대결에서 벗어나 평화로운 한반도 시대를 열어야 한다고 강조했다.
+*   지난 정부에서 단절된 남북 대화를 복원하고 신뢰 회복을 우선해야 한다고 언급하며, 전단 살포 중단 및 대북 확성기 방송 중단 등 긴장 완화 조치를 취했음을 밝혔다.
+*   한일 관계에 대해서는 굴곡진 역사를 직시하되 미래로 나아가는 지혜를 발휘해야 할 때라고 진단했다.
+*   일본을 이웃이자 경제 발전의 중요한 동반자로 언급하며, 국익 중심의 실용 외교와 셔틀 외교를 통해 미래지향적인 상생 협력을 모색할 것이라고 강조했다.
+*   일본 정부에게도 과거의 아픈 역사를 직시하고 양국 신뢰 훼손 방지를 위한 노력을 촉구했다.
 
 ## 요약
-이재명 대통령은 제80주년 광복절 경축사에서 한반도 평화와 남북 관계 개선에 대한 강력한 의지를 표명했다. 대통령은 북한의 현 체제를 존중하고 어떠한 형태의 흡수 통일도 추구하지 않을 것이며, 일체의 적대행위를 할 뜻이 없음을 분명히 밝혔다. 이는 낡은 냉전적 사고와 대결 구도에서 벗어나 평화로운 한반도 시대를 열어가기 위한 정부의 확고한 기조를 보여준다. 특히, 지난 정부에서 단절되었던 남북 대화의 복원과 신뢰 회복을 최우선 과제로 제시하며, 신뢰는 말뿐이 아닌 행동으로 만들어진다는 점을 강조했다. 이를 위해 정부는 이미 대북 전단 살포 및 대북 확성기 방송 중단과 같은 긴장 완화 조치를 취했다고 설명했다.
 
-대통령은 또한 한일 관계에 대한 비전도 제시했다. 그는 양국이 굴곡진 역사를 공유하고 있지만, 과거를 직시하면서도 미래로 나아가는 지혜를 발휘해야 할 때라고 진단했다. 일본을 중요한 이웃이자 경제 동반자로 규정하며, 국익 중심의 실용 외교와 셔틀 외교를 통해 미래지향적인 상생 협력을 모색할 것이라고 밝혔다. 동시에 일본 정부를 향해서는 과거의 아픈 역사를 직시하고 양국 간 신뢰가 훼손되지 않도록 노력해 줄 것을 촉구하는 메시지를 전달했다. 이는 과거사 문제에 대한 원칙을 지키면서도 실질적인 협력을 강화하려는 균형 잡힌 접근으로 해석된다.
+이재명 대통령은 제80주년 광복절을 맞아 서울 세종문화회관에서 열린 경축식에서 한반도 평화와 동북아시아 관계에 대한 비전을 제시했다. 대통령은 경축사를 통해 북한의 현 체제를 존중하며 어떠한 형태의 흡수 통일도 추구하지 않을 것이라는 점을 명확히 했다. 또한, 일체의 적대행위를 할 의사가 없음을 밝히며 낡은 냉전적 사고와 대결 구도에서 벗어나 평화로운 한반도의 새로운 시대를 열어야 할 때임을 강조했다. 이는 지난 정부에서 단절된 남북 대화를 복원하고 신뢰를 회복하는 것이 급선무라는 인식에 기반하며, 정부가 이미 전단 살포 중단 및 대북 확성기 방송 중단과 같은 긴장 완화 조치를 취했음을 언급하며 행동을 통한 신뢰 구축의 중요성을 역설했다.
 
-국내 정치와 관련해서는 분단을 빌미로 국민을 분열시키고 전쟁을 조장하려 했던 세력을 비판하며, 낡은 이념과 진영 논리에서 벗어나 대화와 양보에 기반한 연대와 상생의 정치를 강조했다. 이는 국민 통합과 정치 문화 개선에 대한 대통령의 의지를 보여주는 대목이다. 또한 독립운동가들을 모욕하는 행위를 용납하지 않고 국민 주권이 빛을 잃지 않는 나라를 만들어나가겠다는 다짐을 통해, 광복절의 의미를 되새기고 국가의 정체성과 미래 방향을 제시했다. 전반적으로 이번 경축사는 평화로운 한반도와 상생하는 국제 관계, 그리고 통합된 국내 정치를 지향하는 이재명 정부의 국정 철학을 명확히 드러낸 것으로 평가된다.
+대통령은 남북 관계뿐만 아니라 한일 관계에 대해서도 심도 있는 입장을 표명했다. 양국이 오랫동안 굴곡진 역사를 공유해왔음을 인정하면서도, 과거를 직시하되 미래로 나아가기 위한 지혜를 발휘해야 할 시점이라고 진단했다. 일본을 단순히 이웃을 넘어 경제 발전의 중요한 동반자로 규정하며, 국익 중심의 실용 외교와 셔틀 외교를 통해 자주 만나고 솔직하게 대화함으로써 미래지향적인 상생 협력의 길을 모색할 것이라고 밝혔다.
+
+이와 함께 이 대통령은 일본 정부를 향해 신뢰가 두터울수록 협력의 질도 높아진다는 점을 강조하며, 과거의 아픈 역사를 직시하고 양국의 신뢰가 훼손되지 않도록 노력해 줄 것을 촉구하는 메시지를 전달했다. 이는 과거사 문제로 여전히 고통받는 이들이 존재하고 입장 차이가 있는 갈등도 있지만, 그럼에도 불구하고 일본과의 관계 개선을 통해 동북아시아의 평화와 번영에 기여하겠다는 의지를 보여주는 것으로 해석된다. 전반적으로 이재명 대통령의 광복절 경축사는 한반도와 주변국과의 관계에서 평화와 협력을 지향하는 실용적이고 미래지향적인 외교 기조를 담고 있다.
