--- a/community/resolutions/2.md
+++ b/community/resolutions/2.md
@@ -27,7 +27,7 @@
 
 ---
 
-# 한반도 전시 미군 지침 가짜뉴스 및 대규모 난민 이동 사태 관련 긴급 대응 보고서
+# 주한미군 괌 이동 가짜뉴스 및 대규모 난민 이동 사태 관련 긴급 대응 보고서
 
 **작성일:** 2025년 8월 19일
 
@@ -55,7 +55,7 @@
 
 ### 긴급 대응 방안
 
-## 주한미군 이동 관련 가짜뉴스 확산 및 혼란 사태 긴급 대응 보고서
+## 주한미군 이동 관련 가짜뉴스로 인한 혼란 사태 긴급 대응 보고서
 
 ### 1. 현황 분석
 
