--- a/community/resolutions/2.md
+++ b/community/resolutions/2.md
@@ -1,4 +1,4 @@
-# [일간베스트] (속보) 주한미군 괌으로 이동
+# [일간베스트] (속보) 주한미군 대만으로 이동
 
 **작성 커뮤니티:** 일간베스트
 **작성일:** 2025년 8월 19일 06:25
@@ -33,7 +33,7 @@
 
 ### 1. 현황 분석
 
-최근 온라인 커뮤니티와 소셜 미디어를 중심으로 '주한미군 괌 이동'이라는 내용의 가짜뉴스가 확산되고 있습니다. 이 게시물은 조작된 영상과 함께 유포되어 국민들의 안보 불안감을 증폭시키고 있으며, 이로 인해 사회적 혼란이 가중되고 있습니다.
+최근 온라인 커뮤니티와 소셜 미디어를 중심으로 '주한미군 대만 이동'이라는 내용의 가짜뉴스가 확산되고 있습니다. 이 게시물은 조작된 영상과 함께 유포되어 국민들의 안보 불안감을 증폭시키고 있으며, 이로 인해 사회적 혼란이 가중되고 있습니다.
 
 ---
 
